--- a/bai3.html
+++ b/bai3.html
@@ -72,6 +72,20 @@
             transform: translateY(0);
             box-shadow: 0 2px 6px rgba(0,0,0,0.15);
         }
+        /* Modal detail styling */
+        .modal-content{ border-radius:10px; overflow:hidden; }
+        .modal-header.bg-dark{ background: linear-gradient(90deg,#111,#000); border-bottom:0; }
+        .modal-title{ font-weight:700; letter-spacing:0.2px; }
+        #detailForm .form-label{ font-weight:600; color:#333; }
+        #detailForm .form-control{ border-radius:6px; border:1px solid rgba(0,0,0,0.08); }
+        #detailImagesPreview img{ width:84px; height:84px; object-fit:cover; border-radius:8px; margin-right:8px; margin-bottom:8px; box-shadow:0 2px 6px rgba(0,0,0,0.08); }
+        .modal-footer .btn{ border-radius:6px; }
+        .btn-primary{ background: linear-gradient(90deg,#0d6efd,#0b5ed7); border:0; }
+        .btn-success{ background: linear-gradient(90deg,#198754,#157347); border:0; }
+        .btn-secondary{ background:#6c757d; color:#fff; }
+        @media (min-width: 992px){
+          .modal-lg{ max-width: 900px; }
+        }
     </style>
 </head>
 <body>
@@ -80,13 +94,14 @@
             <div class="card-header d-flex justify-content-between align-items-center">
                 <h4 class="mb-0" style="color:var(--accent-2)">Products Của Minh Hiếu</h4>
                 <div class="d-flex gap-2" style="align-items:center">
-                    <input id="searchInput" class="form-control form-control-sm" placeholder="Tìm theo title..." style="min-width:200px" />
-                    <select id="pageSizeSelect" class="form-select form-select-sm" style="width:110px">
-                        <option value="5">5 / page</option>
-                        <option value="10" selected>10 / page</option>
-                        <option value="20">20 / page</option>
-                    </select>
-                    <button id="exportCsv" class="btn-export">📥 Export CSV</button>
+                  <input id="searchInput" class="form-control form-control-sm" placeholder="Tìm theo title..." style="min-width:200px" />
+                  <select id="pageSizeSelect" class="form-select form-select-sm" style="width:110px">
+                    <option value="5">5 / page</option>
+                    <option value="10" selected>10 / page</option>
+                    <option value="20">20 / page</option>
+                  </select>
+                    <button id="openCreateBtn" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#createModalNew">➕ Create</button>
+                  <button id="exportCsv" class="btn-export">📥 Export CSV</button>
                 </div>
             </div>
             <div class="card-body p-0">
@@ -158,6 +173,53 @@
           </div>
         </div>
       </div>
+    </div>
+
+          <!-- Create Modal (new) -->
+          <div class="modal fade" id="createModalNew" tabindex="-1" aria-labelledby="createModalNewLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+              <div class="modal-content">
+                <div class="modal-header bg-dark text-white">
+                  <h5 class="modal-title" id="createModalNewLabel">Create Product</h5>
+                  <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <form id="createFormNew">
+                    <div class="mb-3">
+                      <label class="form-label">ID (will be assigned)</label>
+                      <input id="newCreateIdDisplay" class="form-control" readonly />
+                    </div>
+                    <div class="mb-3">
+                      <label class="form-label">Title</label>
+                      <input id="newCreateTitle" class="form-control" />
+                    </div>
+                    <div class="mb-3">
+                      <label class="form-label">Image URL</label>
+                      <input id="newCreateImage" class="form-control" placeholder="https://..." />
+                      <div class="mt-2" id="newCreateImagePreview"></div>
+                    </div>
+                    <div class="mb-3">
+                      <label class="form-label">Category ID</label>
+                      <input id="newCreateCategoryId" type="number" class="form-control" />
+                    </div>
+                    <div class="mb-3">
+                      <label class="form-label">Description</label>
+                      <textarea id="newCreateDescription" class="form-control" rows="3"></textarea>
+                    </div>
+                    <div class="mb-3">
+                      <label class="form-label">Price</label>
+                      <input id="newCreatePrice" type="number" step="0.01" class="form-control" />
+                    </div>
+                    <div id="newCreateError" class="mt-2" style="display:none"></div>
+                  </form>
+                </div>
+                <div class="modal-footer">
+                  <button id="newCreateSubmit" type="button" class="btn btn-success">Create</button>
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                </div>
+              </div>
+            </div>
+          </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
